--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Gabriel Montañola <gabriel@montanola.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7.1"
-prefect = {extras = ["aws", "kubernetes", "viz", "templates"], version = "^0.14.19"}
+prefect = {extras = ["aws", "kubernetes", "templates"], version = "^0.14.19"}
 pandas = "^1.2.4"
 requests = "^2.25.1"
 
